--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ padding-left: 50px;
 }
 
 body {
-background-image: url("../images/background.jpg");
+background-image: url("../images/background2.jpg");
 height: 150px;
 text-align: center;
 font-size: 20px;
